# django-lastdayofmonth

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  python-package.yml
django_lastdayofmonth/: __init__.py
tests/: dummy_settings.py  test_functions.py
