[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lastdayofmonth"
version = "0.9.0"
description = "Cross-database LastDayOfMonth function for Django ORM"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Beniamino Nobile", email = "beniaminonobile@gmail.com"}]
dependencies = ["Django>=3.2"]
keywords = ["django", "orm", "last day", "date functions", "calendar", "postgresql", "sqlite"]
requires-python = ">=3.8"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["dj-database-url", "pytest", "pytest-django", "tox"]

[project.urls]
Homepage = "https://github.com/nobilebeniamino/django-lastdayofmonth"